<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true">

    <TextView
        android:id="@+id/textview_set_position"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="5sp"
        android:layout_weight="0"
        android:gravity="center"
        android:minHeight="32dp"
        android:text="@string/set_position"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textview_set_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5sp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:minHeight="32dp"
        android:text="@string/default_set_name"
        android:textSize="24sp" />

    <ImageButton
        android:id="@+id/imgBtnDeleteSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="2dp"
        android:layout_weight="0"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/garbage_bin1"
        android:contentDescription="@string/delete_btn"/>

</LinearLayout>