<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true">

    <TextView
        android:id="@+id/textview_exercise_position"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="5sp"
        android:layout_weight="0"
        android:gravity="center"
        android:minHeight="32dp"
        android:text="@string/workout_position"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textview_exercise_name"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="5sp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:maxLength="15"
        android:minHeight="32dp"
        android:text="@string/default_exercise_name"
        android:textSize="24sp" />

    <ImageButton
        android:id="@+id/imageButton_change_exercise"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_weight="0"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/change_btn"
        app:srcCompat="@android:drawable/ic_menu_edit"
        app:tint="#201111" />

</LinearLayout>